06-05-2004 :
 - wxbMainFrame : Corrected font bug in GTK+ 1.2
 - console_thread : Added support for Mac OS X configuration
      file location.

02-05-2004 :
 - wxbMainFrame : Corrected incorrect casting of thread event
      functions (reported by Aristedes Maniatis)
 - wxbRestorePanel : Corrected incorrect casting of event
      functions (reported by Aristedes Maniatis)

01-05-2004 :
 - wxbRestorePanel : Corrected a problem when you double-clicked an 
      a folder in the list, the list was then refreshed two times
      (instead of one) in the new directory
 - wxbRestorePanel : Improved configuration panels' look
 - wxbRestorePanel : Added titles to configuration panels
 - wxbMainFrame : If the connection drops unexpectedly, it should say 
   it lost the connection to the Director and then wait for you to
   either manually exit or (when it becomes possible) reconnect.
 - wxbMainFrame : corrected segmentation faults when exiting
     (to be verified)
 - wxbMainFrame : the user can quit however the state is

30-04-2004 :
 - wxbRestorePanel : Added "Cancel" button to cancel restore at
     all state of restore process.
 - wxbMainFrame : Added "Send" button
 - wxbRestorePanel (first configure) : Changed defaults values when
     Job Name changes
 - wxbRestorePanel (first configure) : corrected problem when bad
     parameters are chosen
 - wxbRestorePanel : Checking more carefully which job we just have run
 - wxbRestorePanel : Using wxStopWatch instead of GetTicks to manage
     timeouts.
 - wxbMainFrame : Added "Command: " in front of the command window
     so that the user knows he can type into the command line
     (thanks to Kern)
 - wxbMainFrame : Fixed 100% CPU usage in GTK : added buffering when
     receiving data to print to the console (thanks to Phil)
 - wxbRestorePanel : Fixed 100% CPU usage in GTK : added sleeps between
     Yields.

29-04-2004 :
 - wxbRestorePanel : Modified the way a restore is started : much
     more parameters are modifiable.